# lidar_sim_pkg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: bridge.launch.py  car_simulation.launch.py  mid360_ros2_bridge.launch.py  simulation.launch.py
rviz/: car_simulation.rviz
rviz2/: car_simulation.rviz
src/: lidar_node.cpp  lidar_sim.cpp
worlds/: default.sdf  lidar_sim_world.sdf  sensor_tutorial.sdf
